name:                givegif
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/passy/givegif#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2016, Pascal Hartig
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Web.Giphy.Search
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , text
                     , aeson
                     , lens
                     , either
                     , network-uri
                     , containers
  extensions:          DataKinds
                     , DeriveGeneric
                     , TypeOperators
  default-language:    Haskell2010

executable givegif-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , givegif
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite givegif-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , givegif
                     , hspec
                     , basic-prelude
                     , text
                     , directory
                     , aeson
                     , bytestring
                     , network-uri
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/passy/givegif
