name:                givegif
version:             0.1.0.0
synopsis:            Giphy HTTP API wrapper and CLI search tool.
description:         Please see README.md
homepage:            http://github.com/passy/givegif#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2016, Pascal Hartig
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Giphy
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , text
                     , aeson
                     , either
                     , network-uri
                     , containers
                     , microlens
                     , microlens-th
                     , mtl
  default-language:    Haskell2010
  Ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -- -fwarn-missing-import-lists


executable givegif-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , givegif
                     , optparse-applicative
                     , text
                     , network-uri
                     , lens
                     , rainbow
                     , bytestring
  default-language:    Haskell2010

test-suite givegif-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , givegif
                     , hspec
                     , basic-prelude
                     , text
                     , directory
                     , aeson
                     , bytestring
                     , network-uri
                     , containers
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/passy/givegif
